--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
    
   <script src="https://cdnjs.cloudflare.com/ajax/libs/dexie/2.0.4/dexie.min.js"></script>
 
-  <script class="./JS/main.js" type="module"></script> 
+  <script class="JS/main.js" type="module"></script> 
 
 
 </body>
