--- a/Information.html
+++ b/Information.html
@@ -1,9 +1,77 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PFood</title>
+    <link type="text/css" rel="stylesheet" href="style/Product.css"> 
+</head>
+
 	<title> Information</title>
+
+	<header>
+		
+      <h1> Products Information</h1>
+
+      <section class="Items">
+
+      	<div class="Items">
+      		<img src="Mitai.jpg">
+      		<h4>Mitai 1</h4>
+      		<button>Order</button>
+      	</div>
+
+      	<div class="Items">
+      		<img src="Pakam.jpg">
+      		<h4>Pakam 2</h4>
+      		<button>Order</button>
+      	</div>
+
+      	<div class="Items">
+      		<img src="pakora.jpg">
+      		<h4>pakora 3</h4>
+      		<button>Order</button>
+      	</div>
+
+      	<div class="Items">
+      		<img src="Gulab.jpg">
+      		<h4>Gulab 4</h4>
+      		<button>Order</button>
+      	</div>
+
+
+        <div class="Items">
+      		<img src="samosa.jpg">
+      		<h4>samosa 5</h4>
+      		<button>Order</button>
+      	</div>
+
+       <div class="Items">
+      		<img src="Dosa.jpg">
+      		<h4>Dosa 6</h4>
+      		<button>Order</button>
+      	</div>
+
+
+
+
+
+
+
+
+      	
+      </section>
+
+	</header>
+
 </head>
 <body>
+<div class="container">
+	
+</div>
+
+
 
 </body>
 </html>
