--- a/Product.html
+++ b/Product.html
@@ -1,15 +1,12 @@
 
-
-
-   
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bookings</title>
-    <link type="text/css" rel="stylesheet" href="style/booking.css"> 
+    <title>PFood</title>
+    <link type="text/css" rel="stylesheet" href="style/Product.css"> 
 </head>
 <body>
     <table>
@@ -55,6 +52,7 @@
             </td>
         </tr>
     </table>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="JS/script.js"></script>
 </body>
 </html>
+
