--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Travel Agency</title>
+	<title>PFoods</title>
 	<link rel="stylesheet" type="text/css" href="style/style.css">
 	
 </head>
@@ -11,13 +11,13 @@
 	<div class="container">
 		<header>
 			
-          <h2><a href="#">Travels</a></h2>
+          <h2><a href="#">PFoods</a></h2>
 
           <nav>
           	<ul>
           		<li><a href="index.html">Home</a></li>
           		<li><a href="Information.html">Information</a></li>
-          		<li><a href="Bookings.html"/a>Booking</li>
+          		<li><a href="Product.html">Product</a><li>
           		<li><a class="btn"href="#">Register/Log In</a></li>
 
           	</ul>
@@ -43,7 +43,7 @@
 		</div>
 		
 	</div>
-         <script type="text/javascript" src="script.js"></script>
+         
 
          </body>
 
