--- a/Information.html
+++ b/Information.html
@@ -54,8 +54,13 @@
       	</div>
 
 
+    <p> Please use the information below to contact us</p>
 
+         <p> email id:pavan@gmail.com</p>
 
+         <p>mob no:0127089</p>
+         
+         <p>www.indianfood.ie</p>
 
 
 
